--- a/nginx.conf
+++ b/nginx.conf
@@ -19,8 +19,8 @@ http {
     client_max_body_size 0;
 
     upstream payment_api {
-        server api1:5051 max_fails=1 fail_timeout=1s;
-        server api2:5051 max_fails=1 fail_timeout=1s;
+        server api1:5051;
+        server api2:5051;
         keepalive 100;
     }
 
