--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bullmq": "^5.56.5",
     "fastify": "^5.4.0",
-    "ioredis": "^5.6.1"
+    "ioredis": "^5.6.1",
+    "undici": "^7.13.0"
   }
 }
