--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 worker_processes auto ;
 
 events {
-    worker_connections 1024;
+    worker_connections 4096;
     use epoll;
     multi_accept on;
 }
@@ -19,13 +19,13 @@ http {
     client_max_body_size 0;
 
     upstream payment_api {
-        server api1:5051;
-        server api2:5051;
-        keepalive 100;
+        server api1:5051 max_fails=3 fail_timeout=1s;
+        server api2:5051 max_fails=3 fail_timeout=1s;
+        keepalive 512;
     }
 
     server {    
-        listen 9999;
+        listen 9999 reuseport;
 
         location / {
             proxy_pass http://payment_api;
@@ -35,6 +35,12 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
+            proxy_buffering on;
+            proxy_buffers 128 8k;
+            proxy_busy_buffers_size 64k;
+            proxy_read_timeout 2s;
+            proxy_connect_timeout 500ms;
+            proxy_send_timeout 1s;
         }
     }
 }
